TsFacade improved