@@ -1,19 +1,24 @@
 package org.jeesl.factory.ejb.module.ts;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.commons.collections4.ListUtils;
+import org.jeesl.interfaces.model.module.ts.core.JeeslTimeSeries;
 import org.jeesl.interfaces.model.module.ts.core.JeeslTsMultiPoint;
 import org.jeesl.interfaces.model.module.ts.data.JeeslTsData;
 import org.jeesl.interfaces.model.module.ts.data.JeeslTsDataPoint;
+import org.jeesl.model.pojo.map.generic.Nested2List;
 import org.jeesl.model.pojo.map.generic.Nested2Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class EjbTsDataPointFactory<MP extends JeeslTsMultiPoint<?,?,?,?>,
-								DATA extends JeeslTsData<?,?,?,?,?>,
+public class EjbTsDataPointFactory< TS extends JeeslTimeSeries<?,TS,?,?,?>,
+								MP extends JeeslTsMultiPoint<?,?,?,?>,
+								DATA extends JeeslTsData<TS,?,?,POINT,?>,
 								POINT extends JeeslTsDataPoint<DATA,MP>>
 {
 	final static Logger logger = LoggerFactory.getLogger(EjbTsDataPointFactory.class);
@@ -30,13 +35,17 @@ public class EjbTsDataPointFactory<MP extends JeeslTsMultiPoint<?,?,?,?>,
 		POINT ejb = null;
 		try
 		{
-			ejb = cPoint.newInstance();
+			ejb = cPoint.getDeclaredConstructor().newInstance();
 			ejb.setData(data);
 			ejb.setMultiPoint(multiPoint);
 			ejb.setValue(value);
 		}
 		catch (InstantiationException e) {e.printStackTrace();}
 		catch (IllegalAccessException e) {e.printStackTrace();}
+		catch (IllegalArgumentException e) {e.printStackTrace();}
+		catch (InvocationTargetException e) {e.printStackTrace();}
+		catch (NoSuchMethodException e) {e.printStackTrace();}
+		catch (SecurityException e) {e.printStackTrace();}
 		return ejb;
 	}
 	
@@ -45,7 +54,7 @@ public class EjbTsDataPointFactory<MP extends JeeslTsMultiPoint<?,?,?,?>,
 		Map<DATA,List<POINT>> map = new HashMap<DATA,List<POINT>>();
 		for(POINT p : list)
 		{
-			if(!map.containsKey(p.getData())) {map.put(p.getData(),new ArrayList<POINT>());}
+			if(!map.containsKey(p.getData())) {map.put(p.getData(),new ArrayList<>());}
 			map.get(p.getData()).add(p);
 			
 		}
@@ -57,7 +66,7 @@ public class EjbTsDataPointFactory<MP extends JeeslTsMultiPoint<?,?,?,?>,
 		Map<MP,List<POINT>> map = new HashMap<MP,List<POINT>>();
 		for(POINT p : list)
 		{
-			if(!map.containsKey(p.getMultiPoint())) {map.put(p.getMultiPoint(),new ArrayList<POINT>());}
+			if(!map.containsKey(p.getMultiPoint())) {map.put(p.getMultiPoint(),new ArrayList<>());}
 			map.get(p.getMultiPoint()).add(p);
 			
 		}
@@ -92,5 +101,27 @@ public class EjbTsDataPointFactory<MP extends JeeslTsMultiPoint<?,?,?,?>,
 		}
 		
 		return map;
+	}
+	
+	public Nested2List<TS,MP,POINT> toN2List(List<DATA> list)
+	{
+		Nested2List<TS,MP,POINT> n2l = new Nested2List<>();
+		for(DATA d : list)
+		{
+			for(POINT p : ListUtils.emptyIfNull(d.getDataPoints()))
+			{
+				n2l.put(p.getData().getTimeSeries(),p.getMultiPoint(),p);
+			}
+		}
+		return n2l;
+	}
+	public Nested2List<TS,MP,POINT> n2lFromPoints(List<POINT> list)
+	{
+		Nested2List<TS,MP,POINT> n2l = new Nested2List<>();
+		for(POINT p : ListUtils.emptyIfNull(list))
+		{
+			n2l.put(p.getData().getTimeSeries(),p.getMultiPoint(),p);
+		}
+		return n2l;
 	}
 }
